bug fix - bottom of images cut off

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -249,7 +249,6 @@
 .action-inner {
      height: 0;
      padding-top: 100%;
-     overflow: hidden;
      position: relative;
  }
 
